--- a/tutorial/src/main/asciidoc/index.adoc
+++ b/tutorial/src/main/asciidoc/index.adoc
@@ -12,62 +12,11 @@
 
 = Tutorial
 
-== What is DevKit
+include::introduction.adoc[]
 
-The http://www.mulesoft.org/documentation/display/current/Anypoint+Connector+DevKit[DevKit] is an important part of the Anypoint Platform. It is a maven based tool that allows developers to build reusable components that not only can be run as part of a Mule application, but also can easily be configured/consumed from http://www.mulesoft.com/platform/mule-studio[Anypoint Studio]. 
+include::requirements.adoc[]
 
-== When to use it
-
-There are several scenarios in which you may want to build your own connector. Yours might fall under one or more of this scenarios:
-
-* You need to consume an API in one or more applications and you want to make sure everyone uses the same component. 
-* You have an API and want to add strategic value to your business by providing a connector and telling the world "I am part of Mule Platform". 
-* You want to facilitate integration with SaaS and on-premise Web services, applications, and data sources.
-* The API we are consuming supports Pagination, Batch and/or has a SQL capability.
-* The API we are consuming has different entity types and/or their structure can change.
-* I want to extend Mule core.
-
-= Prerequisites
-
-To develop a connector you should have a working knowledge of Mule, Anypoint Studio, and Java development in general, specifically the use of Java annotations. 
-
-DevKit's functionality is exposed to connector developers through http://docs.oracle.com/javase/tutorial/java/annotations/[Java annotations] that generate code and files to interact with Mule, and Anypoint Studio. The generated code provides the interface between the connector and Mule that would otherwise require each connector developer to include extensive boilerplate code, as well as the code and files required to interact with your connector in Anypoint Studio.
-
-You can develop a connector using Windows, Mac, or Linux.
-
-== Setup environment
-
-* Download and install http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java 1.7 JDK]. 
-* Download and install http://maven.apache.org/download.cgi[Maven]. 
-* Download http://www.mulesoft.com/platform/mule-studio[Anypoint Studio].
-* Check http://www.mulesoft.org/documentation/display/current/Maven+Support+in+Anypoint+Studio[maven configuration] in Anypoint Studio.
-* Install Anypoint DevKit plugin.
-* Install a http://git-scm.com/downloads[GitHub] client.
-* Clone https://github.com/mulesoft/mule-cookbook[tutorial] repository into your local machine.
-
-WARNING: JRE is not suited for development, you need to have a JDK installed.
-
-== Install Anypoint Devkit Plugin
-
-Installing the DevKit plugin is as easy as installing any eclipse plugin.
-
-The update site URL is already shipped in the update site list.
-
-1. From the Help menu in *Anypoint Studio*, click *Install New Software*.
-+
-image::install-plugin-1.png[]
-
-2. In the Install menu > Work with, click the down arrow and click Anypoint Addons Update Site. Click the checkbox for Anypoint DevKit Plugin, and click Next.
-+
-image::install-plugin-2.png[width="900"]
-
-3. Proceed through all remaining steps in the wizard to install.
-
-4. Restart Studio.
-
-NOTE: If the Anypoint Addons Update Site is not available in the dropdown list, click Add and copy this URL to the repository Location: http://studio.mulesoft.org/r4/addons/beta
-
-NOTE: This url is not an url you can explore, it is an update site that you can add in you Anypoint Studio.
+include::installPlugin.adoc[]
 
 = Build Your Connector
 
@@ -85,11 +34,15 @@ For a quick overview of the Anypoint Studio DevKit Plugin and how to create a ba
 
 In this tutorial we are going to  incrementally show you how to add value and simplify the connectors users interaction in Mule with the different features provided by DevKit.
 We are going to start by generating a simple @Connector for a web service.
+
 After that we will show you how to add configurable field (@Configurable) that will be used in our @Processor, and how to test it.
 Then we are going to show you how to enrich the errors returned by an API and how to make sure your users don't need to handle session expirations.
+
 As we understand more about the API being consumed, we will show you why we need to add DataSense to your connector and how it improves user experience.
 Having DataSense also allow you to use our DataSense Query Language (DSQL).
+
 Other important feature that most APIs support is the Pagination of results, as well as the Batch processing
+
 For a full list of Supported annotations check our current documentation.
 
 include::service-description.adoc[]
@@ -468,19 +421,7 @@ So..what just happened?
 
 To go deeper into our testing best practices please read the full http://www.mulesoft.org/documentation/display/current/Developing+DevKit+Connector+Tests[testing documentation].
 
-== Improving error Handling
-
-=== Exception Handling (@Handler)
-
-The http://www.mulesoft.org/documentation/display/current/Annotation+Reference#AnnotationReference-handleran[@Handler] feature, is a very useful feature when you want to avoid duplicated code when handling exceptions, and also so that your connector code is clean.
-
-
-
-=== How to handle session expiration (@ReconnectOn)
-
-There is no need for users to add custom code on their mule apps in order to handle session expirations. DevKit provides a mechanism to do this in a clean way.
-
-You just need to annotated your @Proceesor method with the @ReconnectOn exception,
+include::errorHandling.adoc[]
 
 include::datasense.adoc[]
 
@@ -494,18 +435,7 @@ include::batch.adoc[]
 Show how to install it using the plugin.
 Show how to install it without it.
 
-=== Debugging your @Connector
-
-After successfully installing your connector, you can start using your connector in a Mule App.
-By simple putting a breakpoint on your source code of the connector, you will be able to debug it.
-If your connector is a Community connector the source code will be shipped automatically in the installed connector. 
-If your connector is an Enterprise, you will need to manually attach the source code of your jar.
-
-WARNING: In order to correctly debug your code, take into account that the Mule app you are running is using the latest installed version, so if you did some changes, and you want to debug the Mule app, you need to install the connector again.
-
-Debugging your connector when running your test, is as simple as debugging any java class.
-
-You just need to put a break point on your connector
+include::debug.adoc[]
 
 === Documenting my @Connector
 Show how to document your connector and the samples. < Current Doc >
@@ -539,6 +469,17 @@ include::transformer.adoc[]
 Show how to change the display name of the @Connector
 
 ==== Using @Password
+
+When using the @Password in a @Connect parameters, you will generate in the UI a masked input field.
+
+[source,java]
+----
+include::{resourcesDir}/java/v2/ConnectorConnectionStrategy.java[lines=50..53]
+----
+
+In Studio this is translated into:
+
+image::password.png[width="700"]
 
 ==== Using @Placement
 
