--- a/tutorial/src/main/asciidoc/index.adoc
+++ b/tutorial/src/main/asciidoc/index.adoc
@@ -429,51 +429,7 @@ include::pagination.adoc[]
 
 include::batch.adoc[]
 
-== Installing my @Connector
-
-=== Using Anypoint DevKit Plugin
-Installing the connector is basically the same as installing any eclipse plugin.
-
-To install your connector from the devkit plugin, you just need to right click on your project folder, and select the option * Anypoint Studio > Install Or Update *.
-
-
-image::install1.png[width="700"]
-
-This will trigger the devkit maven build, and generate an http://help.eclipse.org/luna/index.jsp?topic=%2Forg.eclipse.pde.doc.user%2Fconcepts%2Fupdate_site.htm[update site] folder.
-
-After the update site is generated a popup will automatically open showing the task that will be performed.
-[[install-dialog]]
-image::install12.png[width="700"]
-
-The next dialog is just to review the installation/update items, followed for some license agreement.
-
-Hit finish and after that you will need to restart Anypoint Studio for the changes to be recognized.
-
-NOTE: Jars are not signed during this run, so you will see a popup.
-
-image::security-warning.png[width="600"]
-
-Now you can use your connector in a mule app.
-
-image::install2.png[width="900"]
-
-=== Using the update site folder
-
-After running from the console *mvn clean package* , you can try installing it by manually selecting the update site.
-
-Go to *Help > Install New Software*
-
-image::install-updatesite.png[width="900"]
-
-Click on Add and in the new dialog look for the folder and select the UpdateSite file, generated under the target folder.
-
-image::install-updatesite2.png[width="900"]
-
-You can either select the zip file named UpdateSite.zip or the folder update-site.
-
-image::install-updatesite3.png[width="900"]
-
-After hitting OK you will be in the same dialog as the one described in the <<install-dialog,previous section>>.
+include::install-connector.adoc[]
 
 include::debug.adoc[]
 
